<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="swedbankpaysdk_error_dialog_title">Error</string>
    <string name="swedbankpaysdk_dialog_close">Close</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="browserAlertTitle">You\&#39;re almost done</string>
    <string name="browserAlertBody">Your payment is being processed. Return to your browser to continue</string>
    <string name="maybeStuckAlertTitle">Stuck</string>
    <string name="maybeStuckAlertBody">It looks like the payment has not progressed for a while. Do you want to wait, or retry the payment in compatibility mode</string>
    <string name="maybeStuckAlertWait">Wait</string>
    <string name="maybeStuckAlertRetry">Retry</string>
    <string name="swedbankpaysdk_retryable_error_title">Communication Error</string>
...
